--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,3 @@
 Flask==2.3.3
 gunicorn==21.2.0
-numpy==1.24.3
-scikit-learn==1.3.0
-opencv-python-headless==4.8.0.76
-easyocr==1.7.0
-Pillow==10.0.0
-textblob==0.17.1
-scipy==1.11.4
-nltk==3.8.1
-pandas==2.0.3
-Werkzeug==2.3.7
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-click==8.1.7
-itsdangerous==2.1.2
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
---find-links https://download.pytorch.org/whl/cpu/torch_stable.html
-joblib==1.3.2
+numpy>=1.26.0
