--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+setuptools>=65.5.0
+wheel>=0.38.0
 Flask==2.3.3
 gunicorn==21.2.0
 numpy==1.24.3
@@ -14,5 +16,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 click==8.1.7
 itsdangerous==2.1.2
+--find-links https://download.pytorch.org/whl/cpu/torch_stable.html
 torch==2.0.1+cpu
+torchvision==0.15.2+cpu
 joblib==1.3.2
