--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-setuptools>=68.0.0
-wheel>=0.40.0
-pip>=23.0.0
-numpy>=1.26.0
-scikit-learn>=1.3.2
-scipy>=1.11.4
-pandas>=2.1.0
+setuptools>=59.6.0
+wheel>=0.37.1
+numpy==1.24.3
+scikit-learn==1.3.0
+scipy==1.11.4
+pandas==2.0.3
 Flask==2.3.3
 gunicorn==21.2.0
 opencv-python-headless==4.8.0.76
